--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
-    <img src="./assets/primecontactnav.gif" alt="" onmouseover="imgHover(this)" onmouseout="imgOut(this)">
+    <img src="./primecontactnav.gif" alt="Image de contact" onmouseover="imgHover(this)" onmouseout="imgOut(this)">
 </body>
 </html>
